--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include(cmake/Catch.cmake)
 # Link this 'library' to set the c++ standard / compile-time options requested
 add_library(default INTERFACE)
 target_compile_features(default INTERFACE cxx_std_17)
+set(CMAKE_CXX_STANDARD 17)
 
 include(cmake/CompilerWarnings.cmake)
 set_project_warnings(default)
