--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,21 @@
 cmake_minimum_required(VERSION 3.10.0)
 
-project(Homework CXX)
+project("Binary Search Tree" CXX)
+option(CLOUD OFF "Enable all sanitizers")
+if(CLOUD)
+    add_compile_options(-fsanitize=undefined,address,leak,pointer-compare,pointer-subtract)
+    add_link_options(-fsanitize=undefined,address,leak,pointer-compare,pointer-subtract)
+endif(CLOUD)
+
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 include(cmake/StandardProjectSettings.cmake)
-include(cmake/Catch.cmake)
 # Link this 'library' to set the c++ standard / compile-time options requested
 add_library(default INTERFACE)
-target_compile_features(default INTERFACE cxx_std_17)
-set(CMAKE_CXX_STANDARD 17)
+target_compile_features(default INTERFACE cxx_std_20)
 
 include(cmake/CompilerWarnings.cmake)
 set_project_warnings(default)
 
 enable_testing()
 add_subdirectory(external/doctest)
-if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
-    add_subdirectory(tree)
-endif()
+add_subdirectory(tree)
